GNOME Bugzilla – Bug 621334
GstBaseTransform should not require a transform_size function
Last modified: 2010-06-14 08:57:25 UTC
GstBaseTransform should not require a transform_size function. Instead, elements that don't change the size should have the option to not implement it.
Created attachment 163441 [details] [review] basetransform: Assume size is the same if no transform_size/get_unit_size Subclasses that don't implemen transform_size should be assumed to produce output buffers of the same size.
Created attachment 163442 [details] [review] capsfilter: Remove transform_size GstBaseTransform now assumes that the size is the same if there is not transform_size.
these seem to be good defaults, commited. commit 24b41d01c8f31449eb3dd1ebf8499b526acb63ab Author: Olivier Crête <olivier.crete@collabora.co.uk> Date: Fri Jun 11 18:49:02 2010 -0400 capsfilter: Remove transform_size GstBaseTransform now assumes that the size is the same if there is not transform_size. https://bugzilla.gnome.org/show_bug.cgi?id=621334 commit 828f2a338964d948fa2134d8f38f6f14af98be17 Author: Olivier Crête <olivier.crete@collabora.co.uk> Date: Fri Jun 11 18:46:30 2010 -0400 basetransform: Assume size is the same if no transform_size/get_unit_size Subclasses that don't implemen transform_size should be assumed to produce output buffers of the same size. https://bugzilla.gnome.org/show_bug.cgi?id=621334