basetransform: Assume size is the same if no transform_size/get_unit_size

Subclasses that don't implemen transform_size should be assumed to produce output
buffers of the same size.

https://bugzilla.gnome.org/show_bug.cgi?id=621334